# cms-admin

./: .gitignore  README.md  pyproject.toml
api/: serializers.py  views.py
content/: admin.py  models.py  serializers.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_remove_contenttype_slug_alter_contenttype_project_and_more.py  0003_alter_contenttype_schema.py  0004_alter_contenttype_schema.py  0005_alter_contenttype_schema.py
core/: settings.py  urls.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_project_slug.py  0003_projectmembership.py  0004_alter_projectmembership_project.py
