[project]
name = "cms-admin"
version = "0.1.0"
description = ""
authors = [
    {name = "Zahragrs", email = "dryagaroosi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
